--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,44 +1,39 @@
 services:
- fastapi:
-  build:
-   context: .
-  container_name: fastapi
-  volumes:
-   - .:/usr/src/app
-  ports:
-   - "8000:8000"
-  networks:
-    - rede_todolist
-    - rede_todolist_db
-  command: ["uvicorn","main:app","--host","0.0.0.0","--reload"]
-  depends_on:
-   - postgres
+  fastapi:
+    build:
+      context: .
+    container_name: fastapi
+    volumes:
+      - .:/usr/src/app
+    ports:
+      - "8000:8000"
+    networks:
+      - rede_todolist
+      - rede_todolist_db
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--reload"]
+    depends_on:
+      - mysql
   
- postgres:
-  image: postgres
-  restart: always
-  container_name: postgres
-  environment:
-   POSTGRES_PASSWORD: 1234
-   POSTGRES_USER: root
-  volumes:
-   - pgdata:/var/lib/postgresql/data
-  networks:
-   - rede_todolist_db
-
- #adminer:
-  #image: adminer
-  #restart: always
-  #ports:
-   #- "8080:8080"
-  #networks:
-   #- rede_todolist_db
+  mysql:
+    image: mysql
+    restart: always
+    container_name: mysqlteste
+    environment:
+      MYSQL_ROOT_PASSWORD: 5912
+    ports:
+      - "3306:3306"
+      - "33060:33060"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./init:/docker-entrypoint-initdb.d
+    networks:
+      - rede_todolist_db
 
 volumes:
- pgdata:
+  mysql_data:
 
 networks:
- rede_todolist:
-  external: true
- rede_todolist_db:
-  driver: bridge
+  rede_todolist:
+    external: true
+  rede_todolist_db:
+    driver: bridge
